# Hello-Wiki

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  mypy.ini  package.json  pnpm-lock.yaml  requirements.txt
.github/workflows/: ci.yml
apps/backend/: ARCHITECTURE_RULES.md  DEVELOPMENT_GUIDE.md  IMPORT_LINTER_GUIDE.md  README.md  pyproject.toml  run.py  run_agent.py
apps/backend/deploy/dev/: Dockerfile  docker-compose.yml  init-extensions.sql
apps/backend/scripts/: backfill_embeddings.py
apps/backend/src/: main.py  schema.sql
apps/backend/src/api/: deps.py  router.py
apps/backend/src/api/assemblers/: __init__.py  chat.py  ingest.py  retrieve.py  wiki.py
apps/backend/src/api/schemas/: __init__.py  agent.py  ingest.py  retrieve.py  wiki.py
apps/backend/src/api/v1/: agent.py  chat.py  ingest.py  init.py  retrieve.py  wiki.py
apps/backend/src/application/: dev_step1.md
apps/backend/src/application/agent/: agent_loop.py  commands.py  handlers.py
apps/backend/src/application/agent/tools/: ingest_tool.py  init_tags_tool.py
apps/backend/src/application/ingest/: __init__.py  commands.py  constants.py  embedding_service.py  extraction_template.json  handlers.py  pipeline.py
apps/backend/src/application/init/: commands.py  handlers.py  init_tags.py
apps/backend/src/application/retrieve/: catalog_handlers.py  commands.py  handlers.py  pipeline.py  rrf.py
apps/backend/src/application/wiki/: handlers.py
apps/backend/src/core/: config.py
apps/backend/src/domain/ai/: embedding_port.py  provider.py
apps/backend/src/domain/knowledge/: catalog_port.py  catalog_vo.py  entities.py  repository.py  retrieve_vo.py  search_port.py  value_objects.py
apps/backend/src/domain/knowledge/scorers/: tag_scorer.py  time_scorer.py
apps/backend/src/domain/wiki/: entities.py  repository.py
apps/backend/src/infrastructure/: wiring.py
apps/backend/src/infrastructure/ai/: embedding_adapter.py  extraction_adapter.py
apps/backend/src/infrastructure/ai/providers/: mock_provider.py  openai_compatible.py
apps/backend/src/infrastructure/db/models/: __init__.py  knowledge.py
apps/backend/src/infrastructure/db/repositories/: async_wiki_repo_adapter.py  knowledge_catalog_repo.py  knowledge_repo.py  knowledge_search_repo.py  tag_serializer.py  wiki_page.py  wiki_repo.py
apps/backend/src/infrastructure/parser/: chunker.py  document_loader.py
apps/backend/src/workers/: tasks.py
apps/backend/tests/: test_agent_loop.py  test_api_assemblers.py  test_api_contracts.py  test_api_deps.py  test_ingest_pipeline.py  test_init_tags_handler.py  test_knowledge_repo.py  test_llm_provider.py  test_main.py  test_retrieve_assembler.py  test_retrieve_pipeline.py  test_retrieve_rrf.py  test_retrieve_scorers.py  test_ts_extraction_adapter.py
apps/skills/knowledge-extraction/: SKILL.md
apps/skills/knowledge-extraction/references/: index.yaml
apps/skills/tag-initialize/references/: index.yaml
apps/web/: .prettierignore  eslint.config.mjs  next.config.ts  package.json
apps/web/src/app/: layout.tsx
apps/web/src/app/(with-sidebar)/: layout.tsx
apps/web/src/app/(with-sidebar)/audit/: page.tsx
apps/web/src/app/(with-sidebar)/channels/: page.tsx
apps/web/src/app/(with-sidebar)/chat/: page.tsx
apps/web/src/app/(with-sidebar)/compile/: page.tsx
apps/web/src/app/(with-sidebar)/devops/: page.tsx
apps/web/src/app/(with-sidebar)/home/: page.tsx
apps/web/src/app/(with-sidebar)/knowledge/: page.tsx
apps/web/src/app/(with-sidebar)/ops/: page.tsx
apps/web/src/app/(with-sidebar)/permissions/: page.tsx
apps/web/src/app/(with-sidebar)/settings/: page.tsx
apps/web/src/app/(with-sidebar)/simulation/: page.tsx
apps/web/src/app/(with-sidebar)/wiki/: page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/component/: side-bar.tsx
apps/web/src/components/: agent-chat-console.tsx  document-upload-control.tsx  init-tags-control.tsx  knowledge-workspace.tsx  mock-table.tsx  page-shell.tsx  route-placeholder.tsx  section-card.tsx  side-bar.tsx  stat-card.tsx  status-badge.tsx
apps/web/src/lib/: agent-api-client.ts  api-client.ts  mock-data.ts
docs/: 2026-05-09-ingest-pipeline-implementation.md  2026-06-03-mvp-retrieve-domains-implementation.md  2026-06-03-ts-ingest-extraction-gateway.md  README.md  dev.md
